--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+}
