--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,42 +7,56 @@
 }
 
 html,
-body,
-.wrapper-input {
+body {
   padding: 0;
   margin: 0;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
-}
-
-.wrapper-input {
-  position: relative;
-}
-
-.wrapper-input div {
-  font-size: 14px;
-  height: 40px;
+  word-break: break-word;
 }
 
 fieldset {
   border: none;
   margin: 0;
   padding: 0;
+  display: grid;
+  row-gap: 24px;
+  grid-template-columns: 5fr 3fr;
+}
+
+input:not([type="radio"]),
+button {
+  width: 100%;
 }
 
 input,
 button {
-  display: block;
+  border: none;
+  z-index: 1;
+  outline: none;
+  border-color: #333333;
+  border-style: solid;
+}
+
+input,
+button,
+label {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
-  width: 100%;
   background-color: transparent;
-  border: none;
   font-size: 18px;
-  padding: 6px 6px;
-  z-index: 1;
-  outline: none;
+}
+
+.input-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+input[type="text"],
+input[type="email"],
+button {
+  height: 38px;
 }
 
 input:disabled ~ label,
@@ -50,23 +64,7 @@ input:disabled,
 button:disabled {
   color: #ccc;
   border-color: #ccc;
-}
-
-input:focus ~ label:not(.filesField),
-input:not(:placeholder-shown) + label:not(.filesField) {
-  transform: translate(-4px, -14px);
-  padding: 0 1px;
-  font-size: 12px;
-  background-color: white;
-}
-
-label:not(.filesField) {
-  font-size: 18px;
-  transition: 0.25s all;
-  pointer-events: none;
-  position: absolute;
-  top: 5px;
-  left: 10px;
+  cursor: auto;
 }
 
 button {
