--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
 
 *,
 *::before,
@@ -10,7 +10,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   word-break: break-word;
 }
@@ -24,7 +24,7 @@ fieldset {
   grid-template-columns: 5fr 3fr;
 }
 
-input:not([type="radio"]),
+input:not([type='radio']),
 button {
   width: 100%;
 }
@@ -42,7 +42,7 @@ input,
 button,
 label {
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   background-color: transparent;
   font-size: 18px;
@@ -53,8 +53,8 @@ label {
   width: 100%;
 }
 
-input[type="text"],
-input[type="email"],
+input[type='text'],
+input[type='email'],
 button {
   height: 38px;
 }
